test/sema/negative/trait_impls6.impala
trait T {}
trait U : T {}

impl T for i32 {}
impl U for i32 {}
